# tmux-rs

./: Cargo.toml
src/: arguments.rs  cmd_parse.lalrpop  colour.rs  file.rs  format.rs  format_draw_.rs  input.rs  job_.rs  lib.rs  mode_tree.rs  screen_redraw.rs  server_client.rs  shim.rs  spawn.rs  status.rs  tmux.rs  window_.rs  window_buffer.rs  window_client.rs  window_copy.rs  window_customize.rs  window_tree.rs
src/cmd_/: cmd_command_prompt.rs  cmd_confirm_before.rs  cmd_paste_buffer.rs  cmd_select_layout.rs  cmd_set_buffer.rs
src/compat/: tree.rs  vis.rs
