[package]
name         = "tmux-rs"
version      = "0.0.3"
authors      = ["Collin Richards <richardscollin@gatech.edu>"]
categories   = ["command-line-utilities"]
edition      = "2024"
include      = ["/src", "COPYING", "README.md", "build.rs"]
keywords     = ["tmux"]
license      = "ISC"
repository   = "https://github.com/richardscollin/tmux-rs"
description  = "A Rust port of tmux"

# Note: most of these features are not supported yet
# they just exist to make matching upstream's
# configuration options easier. However, sixel support is implemented
[features]
default     = ["sixel"]
cgroups     = []
hyperlinks  = []
iutf8       = []
ncurses     = []
nokerninfo  = []
sixel       = []
sys_signame = []
systemd     = []
utempter    = []
utf8proc    = []

# configure linking of external libraries
# defaults to static linking on macOS, and dynamic linking on all other platforms
static      = []
dynamic     = []

[dependencies]
bitflags     = { version = "2.9.1" }
lalrpop-util = { version = "0.22.2", features = ["unicode"], default-features = false }
libc         = { version = "0.2.174" }
num_enum     = { version = "0.7.4" }
paste        = { version = "1.0.15" }
rand         = { version = "0.9.2" }

[build-dependencies]
lalrpop      = { version = "0.22.2", default-features = false }

# https://rust-lang.github.io/rust-clippy/master/index.html
[lints.clippy]
# disabled
too_many_arguments                  = "allow"
# enabled
allow_attributes                    = "warn"
large_types_passed_by_value         = "warn"
literal_string_with_formatting_args = "warn"
manual_is_variant_and               = "warn"
manual_let_else                     = "warn"
manual_string_new                   = "warn"
match_bool                          = "warn"
multiple_crate_versions             = "warn"
semicolon_if_nothing_returned       = "warn"
shadow_same                         = "warn"
too_long_first_doc_paragraph        = "warn"
uninlined_format_args               = "warn"
unused_result_ok                    = "warn"
